--- a/CSS3/gradient.css
+++ b/CSS3/gradient.css
@@ -175,12 +175,27 @@ body {
   background-size: cover;
 }
 
+/* transition-timing-function
+The transition-timing-function property specifies the speed curve of
+the transition effect.It can have the following values:
+ease - the animation starts slowly, then accelerates quickly.
+ease-in - starts slowly, then accelerates, and stops abruptly.
+ease-out - starts quickly, but decelerates to a stop.
+ease-in-out - similar to ease, but with more subtle acceleration
+and deceleration.linear - constant speed throughout the animation;
+ often best for color or opacity changes.
+Finally, we have cubic-bezier(), which allows you to define
+your own values in the cubic-bezier function.
+Possible values are numeric values from 0 to 1.
+transition-timing-function: cubic-bezier(0,0,1,1); */
+
 .thirteen {
   float: left;
   margin: 4px;
-  height: 150px;
+  height: 155px;
   width: 200px;
   color: #FFF;
+  transition: width 3s ease;
   background: #32CD32;
 }
 
